# simple-cdcl-solver

./: CMakeLists.txt  LICENSE
include/: math.hpp  problem_parser.h
src/: main.cpp  math.cpp  problem_parser.cpp  types.h
tests/: main.cpp  test_math.cpp  test_problem_parser.cpp
